# Diploma

./: .gitignore  .trivyignore  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: ci.yaml
config/: development.yaml  test.yaml
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20260404_225136_roles.rs  m20260404_225800_goals.rs  m20260404_225817_rights.rs  m20260404_225854_create_join_table_goals_and_rights.rs  m20260404_230856_create_join_table_goal_rights_and_roles.rs  m20260404_231741_create_refresh_tokens.rs  m20260406_000901_populate_rights.rs  m20260406_001859_populate_goals.rs  m20260406_002231_populate_goal_rights.rs  m20260406_003215_populate_roles.rs  m20260406_003638_populate_goal_rights_roles.rs  m20260406_122756_create_join_table_users_and_roles.rs  m20260410_003534_create_event_types.rs  m20260410_003912_create_client_ids.rs  m20260410_004425_events.rs  m20260410_004554_create_value_types.rs  m20260410_004844_create_payload_types.rs  m20260410_005029_payloads.rs  m20260410_005410_create_allowed_payloads.rs  m20260410_010046_populate_value_types.rs  m20260410_010327_populate_payload_types.rs  m20260410_010626_populate_event_types.rs  m20260410_010919_populate_allowed_payloads.rs
src/: app.rs  docs.rs  lib.rs
src/common/: constants.rs  errors.rs  mod.rs  result.rs  settings.rs
src/controllers/: auth.rs  client_ids.rs  events.rs  graphql.rs  mod.rs
src/extractors/: client_ip.rs  mod.rs  refresh_jwt.rs
src/fixtures/: client_ids.yaml  refresh_tokens.yaml  users.yaml
src/graphql/: mod.rs  query_root.rs
src/initializers/: graphql.rs  mod.rs  swagger_ui.rs  ua_parser.rs
src/models/: allowed_payloads.rs  client_ids.rs  event_types.rs  events.rs  goal_right_roles.rs  goal_rights.rs  goals.rs  mod.rs  payload_types.rs  payloads.rs  refresh_tokens.rs  rights.rs  roles.rs  user_roles.rs  users.rs  value_types.rs
src/services/: mod.rs  permissions.rs  ua_parser.rs
src/tasks/: refresh_tokens.rs
src/views/: auth.rs  avg_stats.rs  client_id.rs  mod.rs  period_stats.rs  status.rs
tests/models/: mod.rs  users.rs  (+1 more)
(+39 files in other folders)
