[workspace]

[package]
name = "stat-api-rs"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "stat_api_rs-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16", git = "https://github.com/SeaQL/loco", branch = "master"}

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "2.0.0-rc.37", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
serde_yaml = "0.9.34"
ua-parser = "0.2.2"
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
seaography = { version = "2.0.0-rc.8", features = ["with-uuid", "with-chrono"] }
lazy_static = "1.5.0"
async-graphql-axum = "7.0"
async-graphql = "7.0"
clap = { version = "4.4.7", features = ["derive"], optional = true}
time = "0.3.47"
thiserror = "2.0.18"

[features]
admin-cli = ["clap"]

[[bin]]
name = "stat_api_rs-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "admin-creation"
path = "src/bin/admin-creation.rs"
required-features = ["admin-cli"]

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
opt-level = "z"
